SimpleComplex/Utils 1.x, 2017-06-18
-----------------------------------
- PathFileList class to list files in dirs simply and securely, avoiding
  extremely complicated and in-flexible N times *iterator procedures.

SimpleComplex/Utils 1.x, 2017-06-16
-----------------------------------
- Removed stuff that's either obsolete or naturally belonging to the config
  package.

SimpleComplex/Utils 1.x, 2017-06-14
-----------------------------------
- PSR-3 LogLevel converters.

SimpleComplex/Utils 1.x, 2017-06-13
-----------------------------------
- Custom .ini parser because PHP native doesn't support raw + typed scanning.

SimpleComplex/Utils 1.x, 2017-06-12
-----------------------------------
- EnvVarConfig class belongs to the config package, not this package.

SimpleComplex/Utils 1.x, 2017-06-11
-----------------------------------
- New class Utils, for helpers that to not deserve a class of their own.
- Don't declare own exception types for no reason.

SimpleComplex/Utils 1.x, 2017-06-05
-----------------------------------
- Unicode and Sanitize shan't use a logger. The benefit of logging argument
  errors is nil (provided the environment's errorhandler traces exceptions),
  and the extra complexity of a dependency is (was) considerable.
- CliEnvironment allow extending constructur to provide dependency by other
  means.
- getInstance() in trait document return value 'object' (not 'static'); or IDE
  might not resolve class when instance is a member of another object than
  the object it is used in.
- Environment variable based configuration class, implementing PSR Simple Cache
  interface.
- EnvVarConfig also implement config-domain-delimiter interface.
- Stopped including getInstance() trait; IDE cannot resolve classes beyond
  1 level of reference.
- CliEnvironment now records input errors and aborts mapping command on such.

SimpleComplex/Utils 1.x, 2017-06-04
-----------------------------------
- CliEnvironment and CliCommand.
